# docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/api/card": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Retrieve all cards with pagination",
                 "consumes": [
                     "application/json"
@@ -51,8 +56,55 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/card/active": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve an active card associated with a Saldo ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Card"
+                ],
+                "summary": "Retrieve active card by Saldo ID",
+                "responses": {
+                    "200": {
+                        "description": "Card data",
+                        "schema": {
+                            "$ref": "#/definitions/pb.ApiResponseCard"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Saldo ID",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to retrieve card record",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/card/create": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Create a new card for a user",
                 "consumes": [
                     "application/json"
@@ -97,52 +149,13 @@
                 }
             }
         },
-        "/api/card/active/{id}": {
-            "get": {
-                "description": "Retrieve an active card associated with a Saldo ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Card"
-                ],
-                "summary": "Retrieve active card by Saldo ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Saldo ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Card data",
-                        "schema": {
-                            "$ref": "#/definitions/pb.ApiResponseCard"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid Saldo ID",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to retrieve card record",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/api/card/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Delete a card by its ID permanently",
                 "consumes": [
                     "application/json"
@@ -187,6 +200,11 @@
         },
         "/api/card/restore/{id}": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Restore a card by its ID",
                 "consumes": [
                     "application/json"
@@ -231,6 +249,11 @@
         },
         "/api/card/trashed": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Retrieve a list of trashed cards",
                 "consumes": [
                     "application/json"
@@ -260,6 +283,11 @@
         },
         "/api/card/trashed/{id}": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Trashed a card by its ID",
                 "consumes": [
                     "application/json"
@@ -302,132 +330,13 @@
                 }
             }
         },
-        "/api/card/user/{id}": {
-            "get": {
-                "description": "Retrieve a list of cards associated with a user by their ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Card"
-                ],
-                "summary": "Retrieve cards by user ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Card data",
-                        "schema": {
-                            "$ref": "#/definitions/pb.ApiResponseCards"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid user ID",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to retrieve card record",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/card/{card_number}": {
-            "get": {
-                "description": "Retrieve a card by its card number",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Card"
-                ],
-                "summary": "Retrieve card by card number",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Card number",
-                        "name": "card_number",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Card data",
-                        "schema": {
-                            "$ref": "#/definitions/pb.ApiResponseCard"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to retrieve card record",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/card/{id}": {
-            "get": {
-                "description": "Retrieve a card by its ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Card"
-                ],
-                "summary": "Retrieve card by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Card ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Card data",
-                        "schema": {
-                            "$ref": "#/definitions/pb.ApiResponseCard"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid card ID",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to retrieve card record",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            },
+        "/api/card/update/{id}": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Update a card for a user",
                 "consumes": [
                     "application/json"
@@ -472,6 +381,138 @@
                     },
                     "500": {
                         "description": "Failed to update card",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/card/user": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve a list of cards associated with a user by their ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Card"
+                ],
+                "summary": "Retrieve cards by user ID",
+                "responses": {
+                    "200": {
+                        "description": "Card data",
+                        "schema": {
+                            "$ref": "#/definitions/pb.ApiResponseCards"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid user ID",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to retrieve card record",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/card/{card_number}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve a card by its card number",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Card"
+                ],
+                "summary": "Retrieve card by card number",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Card number",
+                        "name": "card_number",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Card data",
+                        "schema": {
+                            "$ref": "#/definitions/pb.ApiResponseCard"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to retrieve card record",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/card/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve a card by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Card"
+                ],
+                "summary": "Retrieve card by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Card ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Card data",
+                        "schema": {
+                            "$ref": "#/definitions/pb.ApiResponseCard"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid card ID",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to retrieve card record",
                         "schema": {
                             "$ref": "#/definitions/response.ErrorResponse"
                         }
@@ -2663,6 +2704,11 @@
         },
         "/api/user": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Retrieve a list of all users",
                 "consumes": [
                     "application/json"
@@ -2714,6 +2760,11 @@
         },
         "/api/user/active": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Retrieve a list of active users",
                 "consumes": [
                     "application/json"
@@ -2743,6 +2794,11 @@
         },
         "/api/user/create": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Create a new user with the provided details",
                 "consumes": [
                     "application/json"
@@ -2789,6 +2845,11 @@
         },
         "/api/user/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Permanently delete a user record by its ID.",
                 "consumes": [
                     "application/json"
@@ -2833,6 +2894,11 @@
         },
         "/api/user/trashed": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Retrieve a list of trashed user records",
                 "consumes": [
                     "application/json"
@@ -2862,6 +2928,11 @@
         },
         "/api/user/trashed/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Retrieve a trashed user record by its ID.",
                 "consumes": [
                     "application/json"
@@ -2906,6 +2977,11 @@
         },
         "/api/user/update/{id}": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Update an existing user record with the provided details",
                 "consumes": [
                     "application/json"
@@ -2952,6 +3028,11 @@
         },
         "/api/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Retrieve a user by ID",
                 "consumes": [
                     "application/json"
@@ -3326,7 +3407,7 @@
             }
         },
         "/api/withdraw/update/{id}": {
-            "patch": {
+            "post": {
                 "description": "Update an existing withdraw record with the provided details.",
                 "consumes": [
                     "application/json"
